Refactor data handling in NewSky, IslandHandler, and DatabaseHandler for improved clarity and consistency